tests/lean/inductionErrors.lean.expected.out
inductionErrors.lean:12:12: error: unsolved goals
case upper
q d : Nat
⊢ q + Nat.succ d > q
inductionErrors.lean:11:12: error: unsolved goals
case lower
p d : Nat
⊢ p ≤ p + Nat.succ d
inductionErrors.lean:16:19: error: unknown constant 'elimEx2'
inductionErrors.lean:22:8: error: insufficient number of targets for 'elimEx'
inductionErrors.lean:28:16: error: unexpected eliminator resulting type
  Nat
inductionErrors.lean:35:11: error: unsolved goals
x : Nat
⊢ 0 + 0 = 0
inductionErrors.lean:36:11: error: unsolved goals
x y : Nat
⊢ 0 + (y + 1) = y + 1
inductionErrors.lean:40:14: error: unsolved goals
case zero
⊢ 0 + Nat.zero = Nat.zero
inductionErrors.lean:41:14: error: unsolved goals
case succ
y : Nat
⊢ 0 + Nat.succ y = Nat.succ y
inductionErrors.lean:50:4: error: alternative 'cons' is not needed
inductionErrors.lean:53:2: error: alternative for 'Vec.cons' is not needed
inductionErrors.lean:60:4: error: invalid alternative name 'upper2'
inductionErrors.lean:74:4: error: unused alternative
inductionErrors.lean:80:4: error: unused alternative
